logo spacing fixed

--- a/src/components/Dashboard/Sidebar/Sidebar.css
+++ b/src/components/Dashboard/Sidebar/Sidebar.css
@@ -20,7 +20,6 @@
   justify-content: center;
   position: fixed;
   top: 0;
-  /* left: -100%; */
   transition: 850ms;
 }
 
@@ -37,18 +36,6 @@
   list-style: none;
   height: 60px;
 }
-
-/* .nav-text a {
-  text-decoration: none;
-  color: #f5f5f5;
-  font-size: 18px;
-  width: 95%;
-  height: 100%;
-  display: flex;
-  align-items: center;
-  padding: 0 16px;
-  border-radius: 4px;
-} */
 
 .nav-text a:hover {
   background-color: #1a83ff;
@@ -68,5 +55,5 @@
 }
 
 span {
-  margin-left: 16px;
+  /* margin-left: 16px; */
 }
